_includes/manuals/1.24/3.3.1_rpm_packages.md

Foreman is packaged for the following RPM based distributions:

* RHEL and derivatives, version 7

For most users, it's highly recommended to use the [installer](manuals/{{page.version}}/index.html#3.2ForemanInstaller) as the packages only provide the software and a standalone Foreman service.  The installer installs these packages, then additionally configures Foreman to run under Apache and Passenger with PostgreSQL, plus can configure a complete Puppet setup integrated with Foreman.

#### Pre-requisites: EPEL

All RHEL and derivatives must be [subscribed to EPEL](https://fedoraproject.org/wiki/EPEL) to provide additional dependencies.  Install epel-release from [here](https://fedoraproject.org/wiki/EPEL#How_can_I_use_these_extra_packages.3F) to automatically configure it.

#### Pre-requisites: Software collections
All RHEL and derivatives require software collections from the CentOS SCLorg Special Interest Group (SIG). Foreman uses the `rh-ruby25` collection - which is from RHSCL.

Generally we recommend all users to use the CentOS SCLorg SIG's builds, which can be configured by installing the `foreman-release-scl` package from our repositories (which in turn installs the `centos-release-scl-rh` package). The Foreman installer will use this package by default.

It is also possible to obtain rh-ruby25 from other sources below. These sources are noted only for completeness:

1. CentOS SCLo SIG: `yum install centos-release-scl-rh` to configure from CentOS Extras, or [sclo on mirror.centos.org](http://mirror.centos.org/centos/7/sclo/x86_64/rh/) ([docs](https://wiki.centos.org/AdditionalResources/Repositories/SCL))
1. Oracle Linux: [Software Collection Library documentation](http://docs.oracle.com/cd/E37670_01/E59096/html/index.html)
1. RHEL: customers can access RHSCL as a separate repository or child channel (`rhel-server-rhscl-7-rpms`)
1. Scientific Linux: [softwarecollections on ftp.scientificlinux.org](http://ftp.scientificlinux.org/linux/scientific/7x/external_products/softwarecollections/)

#### Pre-requisites: Optional repo (RHEL only)

RHEL 7 hosts must also be subscribed to the RHEL 7 Optional repository or child channel in RHN.

To enable the optional repository on a RHEL 7 system using subscription-manager, run:

    yum-config-manager --enable rhel-7-server-optional-rpms

#### Pre-requisites: Puppet

It's recommended to [configure the Puppet repositories](https://puppet.com/docs/puppet/latest/install_agents.html#task-9788) to obtain the latest version of Puppet available. The version in EPEL is not supported.

#### Available repositories

Four main repos are provided at <https://yum.theforeman.org>:

* `/client` or `/client/VERSION` (e.g. `/client/{{page.version}}`) carries packages relevant to clients. This is optional and Foreman does not require anything installed on clients.
* `/rails` or `/rails/VERSION` (e.g. `/rails/{{page.version}}`) carries a Rails SCL. This is a requirement for Foreman.
* `/releases` or `/releases/VERSION` (e.g. `/releases/{{page.version}}`) carries the all releases and updates of Foreman and its dependencies.
* `/plugins` or `/plugins/VERSION` (e.g. `/plugins/{{page.version}}`) carries the all plugin releases.

Under each repo are directories for each distribution, then each architecture.

#### Release packages

To set up the repository, foreman-release packages are provided which add a repo definition to `/etc/yum.repos.d`.  Install the appropriate release RPM from these lists:

    yum localinstall https://yum.theforeman.org/releases/{{page.version}}/el7/x86_64/foreman-release.rpm

For release candidate or nightly RPMs, change the URL as appropriate based on the above list of available repositories.

#### Signing

Release and release candidate packages are signed by the per-release key listed on [Security](security.html#GPGkeys).  Nightly packages are not signed.

#### Available packages

Install foreman and other foreman-* packages to add functionality:

    foreman               Foreman server
    foreman-proxy         Foreman Smart Proxy
    foreman-debug         Log and debug collection tools
    foreman-ec2           Amazon EC2 provisioning support
    foreman-gce           Google Compute Engine provisioning support
    foreman-libvirt       libvirt provisioning support
    foreman-openstack     OpenStack Nova provisioning support
    foreman-ovirt         oVirt/RHEV provisioning support
    foreman-rackspace     Rackspace Cloud provisioning support
    foreman-vmware        VMware provisioning support
    foreman-cli           Foreman CLI utility
    foreman-console       Console additions
    foreman-service       A standalone service implementation for use without Passenger
    foreman-selinux       SELinux targeted policy
    foreman-mysql2        MySQL database support
    foreman-postgresql    PostgreSQL database support
    foreman-sqlite        SQLite database support

#### Setup

1. Configure by editing `/etc/foreman/settings.yaml` and `/etc/foreman/database.yml`
1. After changing the database, migrate it: `sudo -u foreman /usr/share/foreman/extras/dbmigrate`
1. Start the foreman service or set up passenger: `systemctl start foreman`

#### Upgrade

See [upgrade instructions](manuals/{{page.version}}/index.html#3.6Upgrade)
